<?xml version="1.0" encoding="utf-8"?>

<!-- ================================================ -->
<!--                                                  -->	
<!-- Layout for SendScreenActivity                    -->
<!--                                                  -->
<!-- ================================================ -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent">
    
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

<!-- ========================================================= --> 
<!--         Displays the scrambled message for review         -->
<!-- ========================================================= -->  
    <TextView
        android:id="@+id/scrambledTextView"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/scrambled_message"
        android:textSize="30sp"
        />
    
    <TextView
        android:id="@+id/scrambledPreview"
        android:gravity="top"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:layout_below="@id/scrambledTextView"
        android:textSize="25sp"
        />
    
   <TextView
         android:id="@+id/optionsTextView"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_margin="10dp"
         android:layout_below="@id/scrambledPreview"
         android:text="@string/options"
         android:textSize="25sp"
         />
   
<!-- =========================================================== --> 
<!-- Gives user the option to send the password with the message -->
<!-- =========================================================== -->     
   <TextView
         android:id="@+id/includePasswordTextView"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_margin="10dp"
         android:layout_below="@id/optionsTextView"
         android:text="@string/include_password"
         android:textSize="20sp"
         />         
    
    <CheckBox 
        android:id="@+id/includePasswordBox"
        android:checked="false"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/includePasswordTextView"
        />
    
    <Button 
        android:id="@+id/sendButton"
        android:layout_height="wrap_content"
        android:layout_width="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@id/includePasswordBox"
        android:text="@string/send"
        />
    
	<Button 
	    android:id="@+id/mainMenuButtonSS"
   		android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:layout_centerHorizontal="true"
    	android:layout_below="@id/sendButton"	
    	android:layout_marginTop="30dp"
    	android:text="@string/main_menu"
    	android:textSize="15sp"
    	/>
       
</RelativeLayout>
</ScrollView>